--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
     <p>Please enter your API key:</p>
     <input type="text" id="api-key-input">
     <button id="save-button">Save</button>
+    <p>To get an API key, please visit the <a href="https://makersuite.google.com/" target="_blank" rel="noopener noreferrer">Google MakeSuite website</a>.</p>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
