--- a/index.html
+++ b/index.html
@@ -258,9 +258,20 @@
     // Event listener for user input changes and keydown
     userInput.addEventListener('input', (event) => {
       sendButton.disabled = userInput.value.trim() === '';
+    });
 
-      if (event.key === 'Enter' && !event.shiftKey && userInput.value.trim() !== '') {
+    userInput.addEventListener('keydown', (event) => {
+      if (event.key === 'Enter' && !event.shiftKey) {
         event.preventDefault();
+        if (userInput.value.trim() !== '') {
+          sendButton.click();
+        }
+      }
+    });
+
+    userInput.addEventListener('submit', (event) => {
+      event.preventDefault();
+      if (userInput.value.trim() !== '') {
         sendButton.click();
       }
     });
